// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RouterProvider should render router provider correctly 1`] = `
<div>
  <div
    class="css-c6xn9e"
  >
    <div
      class="css-9xynfp"
    />
    <div
      class="css-wzg920"
    />
    <div
      class="css-s5xaig"
    />
    <div
      class="css-hyln0r"
    />
    <div
      class="css-ocuih8"
    >
      <div
        class="css-1x4i8xv"
      />
      <div
        class="css-tw4vmx"
      >
        <svg
          class="telegramonic-icon "
          height="80"
          viewBox="0 0 85 85"
          width="80"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs>
            <lineargradient
              id="blueGrad"
              x1="0%"
              x2="0%"
              y1="0%"
              y2="100%"
            >
              <stop
                offset="0%"
                stop-color="#0088cc"
              />
              <stop
                offset="100%"
                stop-color="#007bb9"
              />
            </lineargradient>
            <lineargradient
              id="blueGradDark"
              x1="0%"
              x2="0%"
              y1="0%"
              y2="100%"
            >
              <stop
                offset="0%"
                stop-color="#007bb9"
              />
              <stop
                offset="100%"
                stop-color="#006193"
              />
            </lineargradient>
          </defs>
          <g
            transform="translate(-1, -9) scale(1.2)"
          >
            <rect
              fill="rgba(0,0,0,0.15)"
              height="18"
              rx="4"
              width="56"
              x="7"
              y="60"
            />
            <rect
              fill="rgba(0,0,0,0.15)"
              height="18"
              rx="4"
              width="56"
              x="7"
              y="38"
            />
            <rect
              fill="rgba(0,0,0,0.15)"
              height="18"
              rx="4"
              width="56"
              x="7"
              y="16"
            />
            <rect
              fill="url(#blueGrad)"
              height="18"
              rx="4"
              width="56"
              x="5"
              y="56"
            />
            <rect
              fill="url(#blueGradDark)"
              height="8"
              rx="4"
              width="56"
              x="5"
              y="66"
            />
            <circle
              cx="52"
              cy="65"
              fill="#00ffcc"
              r="2"
            />
             
            <rect
              fill="#006193"
              height="2"
              rx="1"
              width="30"
              x="12"
              y="64"
            />
             
            <rect
              fill="url(#blueGrad)"
              height="18"
              rx="4"
              width="56"
              x="5"
              y="34"
            />
            <rect
              fill="url(#blueGradDark)"
              height="8"
              rx="4"
              width="56"
              x="5"
              y="44"
            />
            <circle
              cx="52"
              cy="43"
              fill="#00ffcc"
              r="2"
            />
            <rect
              fill="#006193"
              height="2"
              rx="1"
              width="30"
              x="12"
              y="42"
            />
            <rect
              fill="url(#blueGrad)"
              height="18"
              rx="4"
              width="56"
              x="5"
              y="12"
            />
            <rect
              fill="url(#blueGradDark)"
              height="8"
              rx="4"
              width="56"
              x="5"
              y="22"
            />
            <circle
              cx="52"
              cy="21"
              fill="#00ffcc"
              r="2"
            />
            <rect
              fill="#006193"
              height="2"
              rx="1"
              width="30"
              x="12"
              y="20"
            />
          </g>
          <g
            transform="translate(29.1, 16.5) scale(1.68)"
          >
            <path
              d="M27.338,3.713l-5.316,22.166l-8.651-5.492l9.699-11.854L9.456,17.781l-4.45-2.882 L27.338,3.713 Z"
              fill="#0088cc"
            />
            <path
              d="M27.338,3.713l-5.316,22.166l-8.651-5.492l9.699-11.854L9.456,17.781l-4.45-2.882L27.338,3.713 M30.285,0L0.984,14.678 l8.174,5.128l3.749,11.464l4.789-5.779l5.616,3.586L30.285,0L30.285,0z"
              fill="#ffffff"
            />
          </g>
        </svg>
      </div>
    </div>
    <p
      class="css-19z886v"
    >
      Telegramonic
    </p>
    <p
      class="css-bmioxu"
    >
      CLOUD STORAGE CLIENT
    </p>
    <div
      class="css-167mtov"
    >
      <div
        class="css-1fylyis"
      />
    </div>
    <div
      class="css-1ttgzt0"
    >
      <p
        class="css-v7jnhe"
      >
        &gt; 
        INITIALIZING SECURE SESSION...
      </p>
      <p
        class="css-1bq43kb"
      />
    </div>
  </div>
</div>
`;

exports[`RouterProvider should render router provider correctly 2`] = `
<div>
  <div
    class="css-z6xxr1"
  >
    <div
      class="chakra-stack css-qngkry"
    >
      <div
        class="chakra-stack css-dky9e1"
      >
        <div
          class="css-1uu8sdj"
        >
          <svg
            class="telegramonic-icon "
            height="100%"
            viewBox="0 0 85 85"
            width="100%"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs>
              <lineargradient
                id="blueGrad"
                x1="0%"
                x2="0%"
                y1="0%"
                y2="100%"
              >
                <stop
                  offset="0%"
                  stop-color="#0088cc"
                />
                <stop
                  offset="100%"
                  stop-color="#007bb9"
                />
              </lineargradient>
              <lineargradient
                id="blueGradDark"
                x1="0%"
                x2="0%"
                y1="0%"
                y2="100%"
              >
                <stop
                  offset="0%"
                  stop-color="#007bb9"
                />
                <stop
                  offset="100%"
                  stop-color="#006193"
                />
              </lineargradient>
            </defs>
            <g
              transform="translate(-1, -9) scale(1.2)"
            >
              <rect
                fill="rgba(0,0,0,0.15)"
                height="18"
                rx="4"
                width="56"
                x="7"
                y="60"
              />
              <rect
                fill="rgba(0,0,0,0.15)"
                height="18"
                rx="4"
                width="56"
                x="7"
                y="38"
              />
              <rect
                fill="rgba(0,0,0,0.15)"
                height="18"
                rx="4"
                width="56"
                x="7"
                y="16"
              />
              <rect
                fill="url(#blueGrad)"
                height="18"
                rx="4"
                width="56"
                x="5"
                y="56"
              />
              <rect
                fill="url(#blueGradDark)"
                height="8"
                rx="4"
                width="56"
                x="5"
                y="66"
              />
              <circle
                cx="52"
                cy="65"
                fill="#00ffcc"
                r="2"
              />
               
              <rect
                fill="#006193"
                height="2"
                rx="1"
                width="30"
                x="12"
                y="64"
              />
               
              <rect
                fill="url(#blueGrad)"
                height="18"
                rx="4"
                width="56"
                x="5"
                y="34"
              />
              <rect
                fill="url(#blueGradDark)"
                height="8"
                rx="4"
                width="56"
                x="5"
                y="44"
              />
              <circle
                cx="52"
                cy="43"
                fill="#00ffcc"
                r="2"
              />
              <rect
                fill="#006193"
                height="2"
                rx="1"
                width="30"
                x="12"
                y="42"
              />
              <rect
                fill="url(#blueGrad)"
                height="18"
                rx="4"
                width="56"
                x="5"
                y="12"
              />
              <rect
                fill="url(#blueGradDark)"
                height="8"
                rx="4"
                width="56"
                x="5"
                y="22"
              />
              <circle
                cx="52"
                cy="21"
                fill="#00ffcc"
                r="2"
              />
              <rect
                fill="#006193"
                height="2"
                rx="1"
                width="30"
                x="12"
                y="20"
              />
            </g>
            <g
              transform="translate(29.1, 16.5) scale(1.68)"
            >
              <path
                d="M27.338,3.713l-5.316,22.166l-8.651-5.492l9.699-11.854L9.456,17.781l-4.45-2.882 L27.338,3.713 Z"
                fill="#0088cc"
              />
              <path
                d="M27.338,3.713l-5.316,22.166l-8.651-5.492l9.699-11.854L9.456,17.781l-4.45-2.882L27.338,3.713 M30.285,0L0.984,14.678 l8.174,5.128l3.749,11.464l4.789-5.779l5.616,3.586L30.285,0L30.285,0z"
                fill="#ffffff"
              />
            </g>
          </svg>
        </div>
        <h2
          class="chakra-heading css-1poqom1"
        >
          Connect Telegram Drive
        </h2>
        <p
          class="css-1gwx093"
        >
          Access your unlimited cloud storage space via MTProto 2.0 secure API connection.
        </p>
      </div>
      <div
        class="css-ey0ahs"
      >
        <div
          class="chakra-stack css-a10vpc"
        >
          <div
            class="chakra-stack css-1x0y7ph"
          >
            <div
              class="css-ay2ova"
            >
              1
            </div>
            <div
              class="css-kow2l5"
            />
          </div>
          <div
            class="chakra-stack css-1x0y7ph"
          >
            <div
              class="css-l1xccw"
            >
              2
            </div>
            <div
              class="css-kow2l5"
            />
          </div>
          <div
            class="chakra-stack css-1x0y7ph"
          >
            <div
              class="css-l1xccw"
            >
              3
            </div>
            <div
              class="css-kow2l5"
            />
          </div>
          <div
            class="chakra-stack css-1x0y7ph"
          >
            <div
              class="css-l1xccw"
            >
              4
            </div>
          </div>
        </div>
        <div
          style="opacity: 0; transform: translateX(20px);"
        >
          <form>
            <div
              class="chakra-stack css-16p0ebk"
            >
              <div
                class="chakra-stack css-1jqo7jp"
              >
                <h2
                  class="chakra-heading css-1x2y5pk"
                >
                  Phone Number
                </h2>
                <p
                  class="css-dhdf1a"
                >
                  Enter the phone number associated with your Telegram account.
                </p>
              </div>
              <div
                class="chakra-stack css-1gzt2am"
              >
                <p
                  class="css-1t542ad"
                >
                  Phone Number
                </p>
                <div
                  class="chakra-stack css-1x0y7ph"
                >
                  <div
                    class="css-6sc8lq"
                  >
                    <select
                      aria-label="Select Country Code"
                      style="appearance: none; background: transparent; outline: none; width: 100%; height: 100%; font-size: 14px; font-family: inherit; cursor: pointer; padding-right: 18px;"
                    >
                      <option
                        value="+1"
                      >
                        🇺🇸
                         
                        US
                         (
                        +1
                        )
                      </option>
                      <option
                        value="+1"
                      >
                        🇨🇦
                         
                        CA
                         (
                        +1
                        )
                      </option>
                      <option
                        value="+44"
                      >
                        🇬🇧
                         
                        GB
                         (
                        +44
                        )
                      </option>
                      <option
                        value="+91"
                      >
                        🇮🇳
                         
                        IN
                         (
                        +91
                        )
                      </option>
                      <option
                        value="+49"
                      >
                        🇩🇪
                         
                        DE
                         (
                        +49
                        )
                      </option>
                      <option
                        value="+33"
                      >
                        🇫🇷
                         
                        FR
                         (
                        +33
                        )
                      </option>
                      <option
                        value="+61"
                      >
                        🇦🇺
                         
                        AU
                         (
                        +61
                        )
                      </option>
                      <option
                        value="+55"
                      >
                        🇧🇷
                         
                        BR
                         (
                        +55
                        )
                      </option>
                      <option
                        value="+81"
                      >
                        🇯🇵
                         
                        JP
                         (
                        +81
                        )
                      </option>
                      <option
                        value="+86"
                      >
                        🇨🇳
                         
                        CN
                         (
                        +86
                        )
                      </option>
                      <option
                        value="+65"
                      >
                        🇸🇬
                         
                        SG
                         (
                        +65
                        )
                      </option>
                      <option
                        value="+7"
                      >
                        🇷🇺
                         
                        RU
                         (
                        +7
                        )
                      </option>
                      <option
                        value="+39"
                      >
                        🇮🇹
                         
                        IT
                         (
                        +39
                        )
                      </option>
                      <option
                        value="+34"
                      >
                        🇪🇸
                         
                        ES
                         (
                        +34
                        )
                      </option>
                      <option
                        value="+31"
                      >
                        🇳🇱
                         
                        NL
                         (
                        +31
                        )
                      </option>
                    </select>
                    <div
                      class="css-1qnp24v"
                    >
                      <svg
                        aria-hidden="true"
                        fill="none"
                        height="10"
                        stroke="currentColor"
                        stroke-width="1.5"
                        viewBox="0 0 10 6"
                        width="10"
                      >
                        <path
                          d="M1 1l4 4 4-4"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                        />
                      </svg>
                    </div>
                  </div>
                  <input
                    class="chakra-input css-c09d3z"
                    placeholder="Enter phone number without country code"
                    value=""
                  />
                </div>
              </div>
              <button
                class="chakra-button css-1sjl20o"
                type="submit"
              >
                Continue
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
    <style>
      
        @keyframes spin {
          to { transform: rotate(360deg); }
        }
        .spinner-rotation {
          animation: spin 0.8s linear infinite;
        }
      
    </style>
  </div>
</div>
`;
